[package]
name = "discord-send"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
  "builder",
  "cache",
  "client",
  "gateway",
  "http",
  "model",
  "rustls_backend",
  "utils",
]
